// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands constraints query test (empty project / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceCwd = 'packages/workspace-a'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceCwd = 'packages/workspace-b'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: WorkspaceName = 'workspace-a'
➤ YN0000: WorkspaceName = 'workspace-b'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test with a syntax error 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0043---prolog_syntax_error\\\\YN0043]8;;\\\\: Syntax error: . or operator expected at line 1, column 3
➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0000---unnamed\\\\YN0000]8;;\\\\: Failed with errors
",
}
`;

exports[`Commands constraints query test with an empty predicate 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0043---prolog_syntax_error\\\\YN0043]8;;\\\\: Syntax error: argument expected at line 1, column 11
➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0000---unnamed\\\\YN0000]8;;\\\\: Failed with errors
",
}
`;

exports[`Commands constraints query test with an unknown predicate 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0044---prolog_existence_error\\\\YN0044]8;;\\\\: Existence error: procedure hello_word/1 not found
➤ ]8;;https://yarnpkg.com/advanced/error-codes#yn0000---unnamed\\\\YN0000]8;;\\\\: Failed with errors
",
}
`;

exports[`Commands constraints query test without trailing . 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;
